--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Front-end part of home4u system",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack"
   },
   "author": "Matroskin",
   "license": "ISC",
@@ -14,6 +15,11 @@
     "webpack": "^4.1.1"
   },
   "devDependencies": {
-    "eslint": "^4.18.2"
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.4",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "eslint": "^4.18.2",
+    "webpack-cli": "^2.0.12"
   }
 }
