--- a/.babelrc
+++ b/.babelrc
@@ -2,5 +2,6 @@
     "presets": [
         ["es2015", { "loose": true, "modules": false }],
         "react"
-    ]
+    ],
+    "plugins": ["transform-class-properties"]
 }
