--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,8 @@
 {
     "presets": [
         ["es2015", { "loose": true, "modules": false }],
-        "react"
+        "react",
+        "stage-1"
     ],
     "plugins": ["transform-class-properties"]
 }
