--- a/package.json
+++ b/package.json
@@ -27,12 +27,16 @@
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-1": "^6.24.1",
+    "css-loader": "^0.28.11",
     "eslint": "^4.18.2",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.9.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.7.0",
+    "material-ui": "^0.20.0",
     "redux-logger": "^3.0.6",
+    "style-loader": "^0.20.3",
     "webpack-cli": "^2.0.12",
     "webpack-dev-server": "^3.1.1"
   }
