--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "eslint-plugin-import": "^2.9.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.7.0",
-    "material-ui": "^0.20.0",
+    "material-ui": "^1.0.0-beta.38",
+    "react-css-modules": "^4.7.1",
+    "react-tap-event-plugin": "^3.0.2",
     "redux-logger": "^3.0.6",
     "style-loader": "^0.20.3",
     "webpack-cli": "^2.0.12",
