--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Matroskin",
   "license": "ISC",
   "dependencies": {
+    "material-ui-icons": "^1.0.0-beta.36",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.7",
