Creating of styled adaptive menu on start page (#5)
* Adding of material-ui package, adding of loaders for css

* Created not responsive TopMenu on the HomePage, and not responsive footer

* Corrected footer to be sticky

* Correcting of menu, footer and content font sizes for small screen

* Hidden menu for small defices finished

* Code refactoring, ready to merge

--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,11 @@
 {
     "presets": [
         ["es2015", { "loose": true, "modules": false }],
-        "react"
+        "react",
+        "stage-1"
     ],
-    "plugins": ["transform-class-properties"]
+    "plugins": [
+        "transform-class-properties",
+        "transform-decorators-legacy"
+    ]
 }
