--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Matroskin",
   "license": "ISC",
   "dependencies": {
+    "material-ui-icons": "^1.0.0-beta.36",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.7",
@@ -25,14 +26,21 @@
     "babel-eslint": "^8.2.2",
     "babel-loader": "^7.1.4",
     "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-1": "^6.24.1",
+    "css-loader": "^0.28.11",
     "eslint": "^4.18.2",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.9.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.7.0",
+    "material-ui": "^1.0.0-beta.38",
+    "react-css-modules": "^4.7.1",
+    "react-tap-event-plugin": "^3.0.2",
     "redux-logger": "^3.0.6",
+    "style-loader": "^0.20.3",
     "webpack-cli": "^2.0.12",
     "webpack-dev-server": "^3.1.1"
   }
