--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "eslint-plugin-import": "^2.9.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.7.0",
+    "file-loader": "^1.1.11",
     "material-ui": "^1.0.0-beta.38",
     "react-css-modules": "^4.7.1",
     "react-tap-event-plugin": "^3.0.2",
