--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "author": "Matroskin",
   "license": "ISC",
   "dependencies": {
-    "material-ui-icons": "^1.0.0-beta.36",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
+    "@material-ui/core": "^1.4.1",
+    "@material-ui/icons": "^2.0.0",
+    "react": "^16.3.0",
+    "react-dom": "^16.3.0",
+    "react-favicon": "0.0.14",
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
@@ -38,7 +40,6 @@
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.7.0",
     "file-loader": "^1.1.11",
-    "material-ui": "^1.0.0-beta.38",
     "react-css-modules": "^4.7.1",
     "react-tap-event-plugin": "^3.0.2",
     "redux-logger": "^3.0.6",
