--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@material-ui/core": "^1.4.1",
     "@material-ui/icons": "^2.0.0",
+    "classnames": "^2.2.6",
     "react": "^16.3.0",
     "react-dom": "^16.3.0",
     "react-favicon": "0.0.14",
