--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -37,7 +37,7 @@
             }
         ],
         "linebreak-style": 0,
-        "no-restricted-imports": [1,  "lodash", "ramda", "crypto", "bluebird", "setimmediate2", "pure-render-decorator", "ajv"],
+        "no-restricted-imports": [1, "ramda", "crypto", "bluebird", "setimmediate2", "pure-render-decorator", "ajv"],
         "no-var": 0,
         "no-shadow": 1,
         "vars-on-top": 0,
