--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@material-ui/core": "^1.4.1",
     "@material-ui/icons": "^2.0.0",
     "classnames": "^2.2.6",
+    "lodash": "^4.17.10",
     "react": "^16.3.0",
     "react-dom": "^16.3.0",
     "react-favicon": "0.0.14",
