--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^16.3.0",
     "react-dom": "^16.3.0",
     "react-favicon": "0.0.14",
+    "react-player": "^1.6.4",
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
